--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "author": "nothing to see here.",
   "license": "ISC",
   "dependencies": {
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
     "redux": "^3.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "webpack": "^1.13.0"
   }
 }
